# raspi-code

./: CMakeLists.txt  build.sh  install.sh  resources.qrc  run.sh
include/: buttonconfiguration.h  clientsocket.h  commandmanager.h  networkmanager.h
qml/: ButtonGrid.qml  SettingsPanel.qml  StreamButton.qml  main.qml
src/: buttonconfiguration.cpp  clientsocket.cpp  commandmanager.cpp  main.cpp  networkmanager.cpp
